# sort-me

./: .env.example  .gitignore  README.md  docker-compose.yaml
backend/: Cargo.toml
backend/migrations/: 20260520150000_initial.sql
backend/src/: db.rs  env_manager.rs  main.rs
backend/src/api/: docs.rs  health.rs  mod.rs
backend/src/classifier/: mod.rs
backend/src/config/: env.rs  mod.rs
backend/src/llm/: mod.rs
backend/src/mail/: mod.rs
backend/src/scheduler/: mod.rs
backend/src/security/: mod.rs
docs/roadmap/: MVP.md  ROADMAP.md
